<resources>
    <string name="app_name">Science Rocks</string>
    <string name="app_play_store_link">https://play.google.com/store/apps/details?id=com.champs21.sciencerocks</string>
    <string name="app_play_store_image_link">https://lh3.googleusercontent.com/A4jdsuLiPvJDPQLtSppQm6VV14NDD9byk5HhC_VIQQ1GwtwzJKEPUkNUVkreqK_B2g=w300-rw</string>
    <string name="facebook_app_id">1038110652893074</string>
    <string name="admob_ad_id">ca-app-pub-2004076542613855/6931025122</string>
    <string name="skin1_title">Skins</string>
    <string name="title_action_banner_page">Banner Popup</string>
    <string name="title_activity_play_list">Rocking Experiments</string>
    <string name="title_activity_play_list_items">Play List</string>
    <string name="title_activity_player">PlayerActivity</string>
    <string name="title_activity_meet_the_anchors_root">Meet The Anchors</string>
    <string name="title_activity_app_preference">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="no_data_found_please_try_again_later">No data found, please try again later.</string>
    <string name="quiz_music">Turn on/off music</string>
    <string name="nav_about">About Science Rocks</string>
    <string name="user_settings">User</string>
    <string name="title_activity_topic_root">Topics</string>
    <string name="title_activity_level_root">Difficulty Levels</string>
    <string name="title_activity_quiz">Quiz</string>
    <string name="title_activity_result_page">Result</string>
    <string name="title_activity_daily_doze">Daily Doze</string>
    <string name="toast_no_internet">Connect to internet please.</string>
    <string name="title_activity_qa_root">Ask Them</string>
    <string name="title_activity_qa_title">Q\u0026A</string>
    <string name="title_activity_daily_doze_new">Daily Doze</string>
    <string name="daily_doze_new_activity_no_previous_data">No previous data is found!</string>
    <string name="daily_doze_new_activity_no_next_data">No previous data is found!</string>
    <string name="home_page_grid_quiz">Quiz Challenge</string>
    <string name="home_page_grid_episodes">Episodes</string>
    <string name="home_page_grid_daily_doze">Daily Doze</string>
    <string name="home_page_grid_mta">Anchors</string>
    <string name="home_page_grid_rocking_experiments">Rocking Experiments</string>
    <string name="home_page_grid_funny_videos">WoW! Videos</string>
    <string name="mta_anchor">Anchor</string>
    <string name="mta_male_anchor_name">আফনান</string>
    <string name="mta_male_anchor_nick_name">আফনান</string>
    <string name="mta_male_anchor_age">২৫ বছর,</string>
    <string name="mta_male_anchor_job_title">শিক্ষক</string>
    <string name="mta_female_anchor_name">স্বর্ণা</string>
    <string name="mta_female_anchor_nick_name">স্বর্ণা</string>
    <string name="mta_female_anchor_age">২১ বছর,</string>
    <string name="mta_female_anchor_job_title">শিক্ষার্থী</string>
    <string name="youtube_player_error">Youtube player error, please try again later.</string>
    <string name="dialog_ask_question">Have More Questions?</string>
    <string name="dialog_ask_question_title">Ask Question</string>
    <string name="dialog_name_empty">Name cannot be empty!</string>
    <string name="dialog_question_empty">Question cannot be empty!</string>
    <string name="msg_please_wait">Please wait!</string>
    <string name="question_submit_success">Your question successfully submitted!</string>
    <string name="dialog_title_quiz">Quiz</string>
    <string name="btn_text_finish">Finish</string>
    <string name="msg_already_saved_score">You have already saved your score!</string>
    <string name="txt_name">Name</string>
    <string name="txt_hint_your_name">Your name</string>
    <string name="txt_question">Question</string>
    <string name="txt_hint_your_question">Your question</string>
    <string name="btn_text_submit">Submit</string>
    <string name="btn_text_cancel">Cancel</string>
    <string name="quiz_page_time">Time</string>
    <string name="quiz_page_score">Score</string>
    <string name="txt_row_proceed">Proceed</string>
    <string name="txt_total_marks">Total Marks</string>
    <string name="txt_your_score">Your Score</string>
    <string name="txt_total_question">Total Question</string>
    <string name="txt_total_time">Total Time</string>
    <string name="txt_correct_answer">Correct Answer</string>
    <string name="txt_wrong_answer">Wrong Answer</string>
    <string name="txt_save_score">Save Score</string>
    <string name="txt_try_again">Try Again</string>
    <string name="txt_summery">Answer Summary</string>
    <string name="txt_top_scores">Leaderboard</string>
    <string name="txt_share">Share</string>
    <string name="txt_answer">Answer</string>
    <string name="txt_explanation">Explanation</string>
    <string name="text_next">Next</string>
    <string name="mta_meet_anchors">ওদের কথা</string>
    <string name="mta_meet_anchors_intro">বিজ্ঞানের প্রতি আফনানের আকর্ষণ ছোটবেলা থেকেই। আফনানের মতে বিজ্ঞানকে বুঝতে পারলে আমরা আমাদের দৈনন্দিন জীবন আর চারপাশের অনেক ঘটনাবলীকেই খুব সহজে বুঝতে এবং ব্যাখ্যা করতে পারবো। অন্যদিকে, ছোটবেলা থেকেই বিজ্ঞানকে স্বর্ণার দারুণ ভয়। এমনকি বিজ্ঞানের নাম শুনলেই তার হাত-পা কাঁপা শুরু হয়ে যেতো।</string>
    <string name="mta_bio_male_details">বিজ্ঞানের প্রতি আফনানের আকর্ষণ ছোটবেলা থেকেই। ক্লাস সিক্সে পড়ার সময় আফনানের শিক্ষকের কাছ থেকে সে বিজ্ঞান নিয়ে জানার অনুপ্রেরণা প্রায়। আর বিজ্ঞানের এই যাত্রাটা শুরু হয় রসায়ন দিয়ে। রসায়নের জটিল সব বিক্রিয়া আর অণু-পরমাণুর গঠন তার কাছে হয়ে উঠে মজার বিষয়। ধীরে ধীরে পদার্থেও তার আকর্ষণ বাড়ে। আর গণিতও ছিল তার খুব পছন্দের বিষয়।
আফনানের মতে বিজ্ঞান আমাদের দৈনন্দিন জীবনেরই একটি অংশ। আর বিজ্ঞানকে বুঝতে পারলে আমরা আমাদের দৈনন্দিন জীবন আর চারপাশের অনেক ঘটনাবলীকেই খুব সহজে বুঝতে এবং ব্যাখ্যা করতে পারবো। এ কারণেই বিজ্ঞানের প্রতি আফনানের আগ্রহটা একটু বেশি।
আফনানের পুরো নাম আফনান শাহ কুরেশী। আগা খান স্কুল থেকে ও’লেভেল আর এ’লেভেল শেষ করে বি.এস.সি করেছেন বুয়েটের কম্পিউটার সায়েন্স এন্ড ইঞ্জিনিয়ারিং ডিপার্টমেন্ট থেকে। নটরডেম কলেজ আয়োজিত পদার্থবিজ্ঞান অলিম্পিয়াডে হয়েছিলেন দ্বিতীয়।
তবে বিজ্ঞান নিয়ে নাড়াচাড়া করলেও আফনান কিন্তু মোটেও নিরস বা কাঠখোট্টা নয়। সে বেশ সংস্কৃতিমনা। আফনান খুব ভালো পিয়ানো বাজায় এবং গজল গায়। আফনান বর্তমানে একটি স্কুলে শিক্ষকতা করছে।
</string>
    <string name="mta_bio_female_details">আফনানের ঠিক বিপরীত হচ্ছে স্বর্ণা। ছোটবেলা থেকেই বিজ্ঞানকে তার দারুণ ভয়। এমনকি বিজ্ঞানের নাম শুনলেই তার হাত-পা কাঁপা শুরু হয়ে যেতো। বিজ্ঞানের কথা শুনলেই স্বর্ণার যেন দাঁত ভাঙার যোগার। পারতপক্ষে তাই বিজ্ঞানের ধারে কাছে ঘেঁষত না স্বর্ণা। কিন্তু ক্লাস নাইনে সায়েন্স গ্রুপে ভর্তি হওয়ার পর থেকে আসল বিপদ শুরু হলো। বিজ্ঞানের জটিল সব ব্যাখ্যা আর কাঠখোট্টা সব শব্দ শুনেই তার মাথা ঘুরে যেতো। পদার্থবিজ্ঞান, রসায়নবিজ্ঞান, গণিত সবকিছুই ছিল তার কাছে দুরূহ। বিজ্ঞানের কোন পড়াই তার কাছে ভালো লাগতো না।
স্বর্ণাকে এ বিপদ থেকে উদ্ধার করলো তার আফনান ভাইয়া। স্বর্ণাকে বোঝাল যে একটু চেষ্টা করলেই বিজ্ঞানকে খুব সহজেই বুঝতে পারা যায়। আর এজন্যই তারা বিজ্ঞান নিয়ে শুরু করলো নানা ধরণের এক্সপেরিমেন্ট। আফনানের উৎসাহে ধীরে ধীরে বিজ্ঞানের প্রতি আগ্রহ বাড়তে থাকে স্বর্ণার।
সানজিদা চৌধুরী স্বর্ণা পড়াশোনা করছে অর্থনীতি নিয়ে ব্র্যাক ইউনিভার্সিটিতে। এর আগে মোহাম্মাদপুর প্রিপারেটরী হায়ার সেকেন্ডারি স্কুল থেকে থেকে করেছে এসএসসি ও এইচএসসি। সেই সাথে ছায়ানটে পড়াশোনা করেছে গান নিয়ে। স্বর্ণা খুব ভালো রবীন্দ্র সংগীত গায়। জাতীয় পর্যায়ে গান গেয়ে অনেক পুরষ্কারও অর্জন করেছে সে।
</string>
    <string name="btn_previous">Previous</string>
    <string name="btn_next">Next</string>
    <string name="str_00">00</string>
    <string name="msg_score_saved_successfully">Your score saved successfully.</string>
    <string name="txt_button_episode_winner_list">Episode Wise  Winner List</string>
    <string name="title_activity_winner_list_root">Winner List</string>
    <string name="txt_btn_winner_List">Winner List</string>
    <string name="txt_question1">Question 1:</string>
    <string name="txt_question2">Question 2:</string>
    <string name="txt_answer1">Answer 1:</string>
    <string name="txt_answer2">Answer 2:</string>
    <string name="txt_winner1">Winner1</string>
    <string name="txt_winner2">Winner2</string>
    <string name="txt_btn_ok">OK</string>
    <string name="txt_button_winner_quiz_answer"> TV Quiz Answers</string>
    <string name="winner_list_list_title">Winner List</string>
    <string name="winner_list_winner1">Winner 1</string>
    <string name="winner_list_winner2">Winner 2</string>
    <string name="winner_list_winner3">Winner 3</string>
    <string name="popup_title_quiz_answers">QUIZ ANSWERS</string>
    <string name="title_activity_about_science_rocks">About Science Rocks</string>
    <string name="title_go_to_champs">Champs21.com</string>
    <string name="title_search">Search</string>
    <string name="title_share">Share</string>
    <string name="title_download">Download</string>
</resources>