<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.champs21.sciencerocks.HomePageGridActivity">

    <item
        android:id="@+id/action_share"
        android:orderInCategory="200"
        android:icon="@drawable/ic_share_white_24dp"
        android:title="@string/title_share"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_download"
        android:orderInCategory="300"
        android:icon="@drawable/ic_file_download_white_24dp"
        android:title="@string/title_download"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_champs"
        android:orderInCategory="400"
        android:icon="@drawable/champs21"
        android:title="@string/title_go_to_champs"
        app:showAsAction="always"/>



</menu>
