<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.champs21.sciencerocks.HomePageGridActivity">
    <!--<item
        android:id="@+id/action_skin_choose"
        android:orderInCategory="100"
        android:title="@string/skin1_title"
        app:showAsAction="never" />-->

    <item
        android:id="@+id/action_search"
        android:orderInCategory="100"
        android:icon="@drawable/ic_search_white_24dp"
        android:title="@string/title_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_about_sr"
        android:orderInCategory="200"
        android:icon="@drawable/ic_about"
        android:title="@string/title_activity_about_science_rocks"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_banner_page"
        android:orderInCategory="300"
        android:icon="@drawable/ic_visibility_white_24dp"
        android:title="@string/title_action_banner_page"
        app:showAsAction="always"/>

</menu>
