<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView2" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorPrimaryDark"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/popup_title_quiz_answers"
                    android:textColor="@color/colorWhite"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:id="@+id/textView20"
                    android:layout_marginBottom="20dp"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/quiz_popup"
                    android:layout_marginBottom="-2dp"
                    android:id="@+id/imageView3" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorWindowBg">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_question1"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:textColor="@color/qaListDateColor"
                        android:id="@+id/textView21" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_question1"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:textColor="@color/colorBlack"
                        android:id="@+id/txtQuestion1" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_answer1"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:textColor="@color/colorWhite"
                        android:id="@+id/textView22" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_question1"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:textColor="@color/colorWhite"
                        android:id="@+id/txtAnswer1" />


                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/colorPrimary">

                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_question2"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:textColor="@color/qaListDateColor"
                        android:id="@+id/textView23" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_question1"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:textColor="@color/colorBlack"
                        android:id="@+id/txtQuestion2" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_answer2"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:textColor="@color/colorWhite"
                        android:id="@+id/textView24" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_question2"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:textColor="@color/colorWhite"
                        android:id="@+id/txtAnswer2" />


                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp">

                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/btnOk"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/txt_btn_ok"/>

                </LinearLayout>


            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
